--- a/src/sass/sections/_body.scss
+++ b/src/sass/sections/_body.scss
@@ -1,6 +1,6 @@
 // ---- Introducing d-FIRST ----- //
 .technology {
-  padding-top: 10rem;
+  padding-top: 8rem;
   padding-bottom: 8rem;
   &.clip-path {
     padding-top: 4rem;
@@ -157,8 +157,8 @@
 
 .privacy {
   color: $sectionParagraphTextColour;
-  padding-top: 7rem;
-  padding-bottom: 8rem;
+  padding-top: 6rem;
+  padding-bottom: 6rem;
   &.clip-path {
     padding-top: 1rem;
   }
@@ -276,8 +276,12 @@
     }
   }
   .technology {
-    padding-bottom: 8rem;
     padding-top: 5.5rem;
+    padding-bottom: 8rem;
+    &.clip-path {
+      padding-top: 5.5rem;
+      padding-bottom: 8rem;
+    }
     &-stack {
       flex-direction: column;
     }
@@ -288,6 +292,10 @@
 
   .supporting {
     padding-top: 5.5rem;
+    &.clip-path {
+      padding-top: 5.5rem;
+      padding-bottom: 8rem;
+    }
     &-table {
       padding-top: 3rem;
       padding-bottom: 0;
@@ -325,6 +333,9 @@
   }
   .privacy {
     padding-top: 5.5rem;
+    &.clip-path {
+      padding-top: 5.5rem;
+    }
     &-buttons {
       display: flex;
       flex-direction: column;
