--- a/src/sass/sections/_results.scss
+++ b/src/sass/sections/_results.scss
@@ -38,7 +38,7 @@
 }
 
 .analysis {
-  padding-top: 3rem;
+  padding-top: 5rem;
   &-results {
     .clean-title {
       margin-bottom: 2.2rem;
@@ -105,8 +105,7 @@
   .analysis {
     .regenerated-title {
       padding: 0;
-      font-size: 2.5rem;
-      line-height: 3rem;
+      font-size: 3rem;
     }
     &-container {
       flex-direction: column;
@@ -126,6 +125,15 @@
     }
     .table-header {
       font-size: 1.6rem;
+    }
+  }
+}
+
+@media only screen and (max-width: $sm-breakpoint) {
+  .analysis {
+    .regenerated-title {
+      font-size: 2.7rem;
+      line-height: 3.4rem;
     }
   }
 }
